--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: TITLE
 name: NAME
-remote_theme: USERNAME/REPO
+remote_theme: wideltann/wideltann.github.io
 # google_analytics: ANALYTICS_ID
 color-scheme: red
 
