--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: TITLE
 name: NAME
+theme: minima
 remote_theme: wideltann/wideltann.github.io
 # google_analytics: ANALYTICS_ID
 color-scheme: red
